--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,10 @@ packaging==24.1
 colorama==0.4.6
 dataclasses-json==0.6.7
 openai==1.43.0
+# FastAPI dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+python-multipart==0.0.6
+httpx==0.25.2
+python-dotenv==1.0.0
