--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,7 @@ pydantic==2.5.0
 python-multipart==0.0.6
 httpx==0.25.2
 python-dotenv==1.0.0
+# Testing dependencies
+pytest==8.3.2
+pytest-asyncio==0.23.2
+httpx==0.25.2
