--- a/data/sample/requirements_map.yaml
+++ b/data/sample/requirements_map.yaml
@@ -9,5 +9,6 @@
 - path: "src/main.cpp"
   req_ids: ["AD-REQ-601"]
   requirement: "Feature: While calling API we need to pass 200 as input"
-
-
+- path: "src/vision/camera_pipeline.cpp"
+  req_ids: ["AD-REQ-602"]
+  requirement: "Feature: we need to compare height against 5"
