feat: Simplify MCP server for local use with changelog support
- Remove WorkOS authentication complexity
- Add comprehensive changelog information to MCP responses
- Add get_changelog tool for accessing changelog data
- Create Cursor MCP configuration and setup instructions
- Test all MCP tools successfully

The MCP server now provides:
- autorebase: Complete AutoRebase process with AI conflict resolution
- validate_repository: GitHub repository validation
- get_changelog: Access to detailed changelog information

All tools work locally without authentication requirements.

--- a/mcp-server/.env.example
+++ b/mcp-server/.env.example
@@ -1,12 +1,15 @@
 # AutoRebase MCP Server Environment Variables
 
 # OpenAI API Key (required for AI conflict resolution)
-# Get your key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=sk-your-openai-api-key-here
 
-# GitHub Personal Access Token (optional, for repository operations)
+# WorkOS AuthKit Configuration (required for user authentication)
+WORKOS_CLIENT_ID=client_01H1234567890abcdef
+WORKOS_CLIENT_SECRET=sk_test_1234567890abcdef
+REDIRECT_URI=http://localhost:8788/callback
+
+# GitHub Personal Access Token (optional, fallback for direct token auth)
 # Get your token from: https://github.com/settings/tokens
-# Required scopes: repo, workflow (for private repos)
 GITHUB_TOKEN=ghp_your-github-token-here
 
 # Optional: Set to 'true' for debug logging
