Add HTTP transport support to MCP server
- Add configurable HTTP transport mode alongside stdio
- Support SSE (Server-Sent Events) for MCP communication
- Add health check endpoint at /health
- Add configurable port via MCP_PORT environment variable
- Add new npm scripts for HTTP mode: start:http, dev:http
- Add test script for HTTP transport validation
- Add example MCP configuration for HTTP transport
- Add comprehensive README with usage instructions

Features:
- ✅ Dual transport modes: stdio (default) and http
- ✅ Configurable port (default: 3000)
- ✅ Health check endpoint
- ✅ SSE endpoint for MCP communication
- ✅ CORS support for web clients
- ✅ Graceful shutdown handling
- ✅ Comprehensive testing

Usage:
- Stdio: npm start (default)
- HTTP: MCP_TRANSPORT=http MCP_PORT=3000 npm start
- Test: npm run test:http

--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "start:http": "MCP_TRANSPORT=http node dist/index.js",
+    "start:http:dev": "MCP_TRANSPORT=http tsx src/index.ts",
     "dev": "tsx src/index.ts",
+    "dev:http": "MCP_TRANSPORT=http tsx src/index.ts",
+    "test:http": "node test-http.js",
     "clean": "rm -rf dist"
   },
   "keywords": [
